--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -37,14 +37,14 @@
 
                 <div class="form-group">
                     <label>Aktuelles Passwort: <sup>*</sup></label>
-                    <input type="password" id="settings_current_password" name="password" class="form-control"
+                    <input type="password" data-testid="settings_password_current" name="password" class="form-control"
                         placeholder="***************" required>
                 </div>
 
                 {{#userHasPermission "PASSWORD_EDIT"}}
                 <div class="form-group">
                     <label>Neues Passwort:</label>
-                    <input type="password" name="passwordNew" id="passwordNew" class="form-control"
+                    <input type="password" name="passwordNew" data-testid="settings_password_new" class="form-control"
                         placeholder="***************"
                         pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
                         title="{{> "lib/forms/password-hint" plaintext=true}}">
@@ -52,7 +52,7 @@
 
                 <div class="form-group">
                     <label>Neues Passwort wiederholen:</label>
-                    <input type="password" name="password_control" id="password_control"
+                    <input type="password" name="password_control" data-testid="settings_password_control"
                         class="form-control" placeholder="***************"
                         title="{{> "lib/forms/password-hint" plaintext=true}}">
                 </div>
@@ -71,7 +71,7 @@
 
 
                 <div class="form-group">
-                    <input type="submit" class="btn btn-primary" id="submit_new_password_btn" data-testid="submitNewPassword"/>
+                    <input type="submit" class="btn btn-primary" data-testid="submit_new_password_btn"/>
                 </div>
             </form>
 
