constant case for testids

--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -85,7 +85,7 @@
                             {{> "lib/ldap-info"}}
                         {{else}}
                             <div class="col-sm-12 no-padding">
-                                <button type="submit" data-testid="addStudentBtn" class="btn btn-primary btn-add-modal">
+                                <button type="submit" data-testid="btn_add_student" class="btn btn-primary btn-add-modal">
                                     Schüler hinzufügen
                                 </button>
                                 <button class="btn btn-secondary btn-invitation-link student">
