--- a/views/administration/dashboard.hbs
+++ b/views/administration/dashboard.hbs
@@ -16,7 +16,7 @@
                         {{#userHasPermission 'STUDENT_CREATE'}}
                             <div class="row card-deck-row">
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <div class="card h-100 teacher-option" data-testid="administrateStudents" onclick="location.href='/administration/students'">
+                                    <div class="card h-100 teacher-option" data-testid="administrate_students" onclick="location.href='/administration/students'">
                                         <div class="card-block homework">
                                             <div class="card-text">
                                                 <h2 class="h4"><i class="fa fa-odnoklassniki"></i> Schüler verwalten</h2>
@@ -26,7 +26,7 @@
                                 </div>
 
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <div class="card h-100 teacher-option" data-testid="administrateTeachers" onclick="location.href='/administration/teachers/'">
+                                    <div class="card h-100 teacher-option" data-testid="administrate_teachers" onclick="location.href='/administration/teachers/'">
                                         <div class="card-block homework">
                                             <div class="card-text">
                                                 <h2 class="h4"><i class="fa fa-user"></i> Lehrer verwalten</h2>
