--- a/views/lib/forms/paginatedForm.hbs
+++ b/views/lib/forms/paginatedForm.hbs
@@ -11,7 +11,7 @@
 
 	<span class="progressbar"></span>
 
-	<div class="panels mb-2" data-testid="loginContainer">
+	<div class="panels mb-2">
 		{{#block "panels"}}{{/block}}
 	</div>
 
