login ids adjusted

--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -25,7 +25,7 @@
                 <div class="sectionsContainer">
                     <div class="sections">
                         <!-- Aktuelle Kurse -->
-                        <div class="section section-course" data-section="js-active" id="aktuelleKurse">
+                        <div class="section section-course" data-section="js-active">
                             {{#if total.active}}
                                 {{> 'dashboard/components/card_section' section-id="activeCourses" title="" content=activeCourses link-text="Öffnen" additionalInfoName="memberCount"}}
                             {{else}}
