--- a/views/firstLogin/sections/password.hbs
+++ b/views/firstLogin/sections/password.hbs
@@ -15,7 +15,7 @@
       </div>
       <div class="form-group col-md-6 col-sm-12">
         <label>Wiederhole dein neues Passwort: *</label>
-        <input class="form-control" data-testid="password_control" id="password_control" name="password-2" type="password" placeholder="Neues Passwort wiederholen" required/>
+        <input class="form-control" data-testid="firstlogin_password_control" id="password_control" name="password-2" type="password" placeholder="Neues Passwort wiederholen" required/>
       </div>
     </div>
 
