--- a/views/pwRecovery/pwrecovery.hbs
+++ b/views/pwRecovery/pwrecovery.hbs
@@ -28,7 +28,7 @@
 					</div>
 					<div class="form-group">
 						<label>Neues Passwort wiederholen</label>
-						<input type="password" data-testid="password_control" name="password_control" id="password_control" class="form-control form-control-lg" placeholder="***************" title="{{> "lib/forms/password-hint" plaintext=true}}" required>
+						<input type="password" name="password_control" id="password_control" class="form-control form-control-lg" placeholder="***************" title="{{> "lib/forms/password-hint" plaintext=true}}" required>
 					</div>
 					<input type="submit" class="btn btn-primary btn-block" value="{{buttonLabel}}" />
 				</form>
