--- a/views/firstLogin/sections/password.hbs
+++ b/views/firstLogin/sections/password.hbs
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="form-group col-md-6 col-sm-12">
         <label>Neues Passwort: *</label>
-        <input class="form-control" id="password" data-testid="password" name="password-1" type="password" placeholder="Neues Passwort" minlength="8" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen." required/>
+        <input class="form-control" id="password" data-testid="firstlogin_password" name="password-1" type="password" placeholder="Neues Passwort" minlength="8" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen." required/>
       </div>
       <div class="form-group col-md-6 col-sm-12">
         <label>Wiederhole dein neues Passwort: *</label>
