--- a/views/news/edit.hbs
+++ b/views/news/edit.hbs
@@ -36,7 +36,7 @@
 
             <div class="form-group">
                 <label>Titel</label>
-                <input id="news_title_id" data-testid="news_title" class="form-control" name="title" type="text" placeholder="Titel" value="{{news.title}}" required />
+                <input data-testid="news_title" class="form-control" name="title" type="text" placeholder="Titel" value="{{news.title}}" required />
             </div>
 
             <div class="form-group">
@@ -46,7 +46,7 @@
 
             <div class="form-group">
                 <label>automatische Veröffentlichung vorplanen (optional)</label>
-                <input class="form-control" data-datetime data-min-date="0" id="news_date_to_be_displayed" data-testid="dateToBeDisplayed" name="displayAt" type="text" value="{{news.displayAt}}"/>
+                <input class="form-control" data-datetime data-min-date="0" data-testid="news_date_to_be_displayed" name="displayAt" type="text" value="{{news.displayAt}}"/>
             </div>
 
             <div class="modal-footer">
@@ -54,7 +54,7 @@
                     {{closeLabel}}
                 </button>
 
-                <button type="submit" data-testid="submitNews-Btn" class="btn btn-primary btn-submit">
+                <button type="submit" data-testid="btn_news_submit" class="btn btn-primary btn-submit">
                     {{submitLabel}}
                 </button>
             </div>
