fix createSuccessor students missing

--- a/views/administration/forms/form-classes-edit.hbs
+++ b/views/administration/forms/form-classes-edit.hbs
@@ -11,6 +11,9 @@
 
 {{#ifeq mode "upgrade"}}
 	<input name="predecessor" type="hidden" data-force-value="true" value="{{../class.predecessor}}" />
+	{{#each ../class.userIds}}
+		<input name="userIds[]" type="hidden" data-force-value="true" value="{{this}}" />
+	{{/each}}
 {{/ifeq}}
 
 <div class="form-group">
