added more helpful error message if no file type is choosen on file creation menu

--- a/views/files/forms/form-new-file.hbs
+++ b/views/files/forms/form-new-file.hbs
@@ -4,7 +4,7 @@
 
     <label for="file-ending">Dateityp:</label>
     <select class="custom-select mr-sm-2 form-control" id="file-ending">
-        <option selected>Format auswählen</option>
+        <option selected disabled style="display:none;">Format auswählen</option>
         <option value="docx">Textdokument (docx)</option>
         <option value="xlsx">Tabelle (xlsx)</option>
         <option value="pptx">Präsentation (pptx)</option>
