move baseUrl to meta tag

--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -15,6 +15,7 @@
   {{/content}}
 
   {{#content "page"}}
+  <meta name="baseUrl" content={{baseUrl}}>
     {{#userHasPermission "COURSE_EDIT"}}
       <div class="dropdown dropdown-course minimal-button">
         <a class="btn btn-sm dropdown-toggle btn-course-dropdown" title="Weiteres" data-toggle="dropdown">
