--- a/views/help/forms/form_wish.hbs
+++ b/views/help/forms/form_wish.hbs
@@ -24,6 +24,7 @@
 <label class="form-group">
 	<span class="control-label optional">Bereich wählen</span>
 	<select name="category" id="category" data-placeholder="Bereich wählen (optional)" class="chosen-select" tabindex="-1">
+		<option value="" selected disabled hidden></option>
 		<option value="login_registration">Anmeldung/Registrierung</option>
 		<option value="dashboard">Übersicht</option>
 		<option value="courses">Kurse</option>
@@ -36,4 +37,10 @@
 		<option value="administration">Verwaltung</option>
 		<option value="other">Sonstiges</option>
 	</select>
+</label>
+<label class="form-group">
+	<span class="control-label" for="email">
+		E-Mail-Adresse für eventuelle Rückfragen
+	</span>
+	<input type="email" name="replyEmail" placeholder="E-Mail-Adresse" value="{{ currentUser.email }}" class="form-control" required>
 </label>
