--- a/views/lib/help_menu.hbs
+++ b/views/lib/help_menu.hbs
@@ -22,13 +22,13 @@
                 <li class="list-group-item list-group-item-action">
                     <span>
                         <i class="fa fa-pencil" aria-hidden="true"></i>
-                        <a href="#" class="link submit-contactHPI">Wunsch oder Problem senden</a>
+                        <a href="/help?activeForm=team#contact-form" class="link">Wunsch oder Problem senden</a>
                     </span>
                 </li>
                 <li class="list-group-item list-group-item-action">
                     <span>
                         <i class="fa fa-comment" aria-hidden="true"></i>
-                        <a href="#" class="link submit-contactAdmin">Admin deiner Schule kontaktieren</a>
+                        <a href="/help?activeForm=admin#contact-form" class="link">Admin deiner Schule kontaktieren</a>
                     </span>
                 </li>
             </ul>
