remove unused id

--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -20,7 +20,7 @@
 
 
     {{#content "page"}}
-        <section class="section-course" id="section-course">
+        <section class="section-course">
           <div class="wizard-header">
             <div class="header-icon">
               <img src="/images/empty-states/shuttle.svg" alt="Space Shuttle Start" class="hidden-xs-down"/>
@@ -241,7 +241,7 @@
                     <p class="text-muted">
                       Lege die Inhalte deines Unterrichts an.
                     </p>
-                    
+
                     <a class="h6" id="addclass-create-homework" href="#">Aufgaben stellen</a>
                     <p class="text-muted">
                       Stelle deinen Kursteilnehmern Aufgaben und sieh dir ihre Abgaben an.
