--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -113,7 +113,7 @@
                     {{/content}}
                 {{/embed}}
 
-                {{#embed "lib/components/modal-form" id="ImportForm" action="" method="" class="import-modal" enctype="multipart/form-data" id="studentImportForm"}}
+                {{#embed "lib/components/modal-form" action=(concat "/administration/students/import?_csrf=" @root.csrfToken) method="post" class="import-modal" enctype="multipart/form-data"}}
                     {{#content "fields"}}
                         {{> "administration/forms/form-import" roles="student"}}
                     {{/content}}
