--- a/views/lib/forms/paginatedForm.hbs
+++ b/views/lib/forms/paginatedForm.hbs
@@ -1,6 +1,8 @@
-<form class="form sections-{{sections}} {{class}}" action="{{action}}{{#if sso}}/sso/{{account}}{{/if}}" method="{{method}}" autocomplete="off" >
+<form class="form sections-{{sections}} {{class}}" action="{{action}}{{#if sso}}/sso/{{account}}{{/if}}"
+	method="{{method}}" autocomplete="off">
 	{{#for 1 (add sections 1) 1}}
-		<input id="section-{{this}}" type="radio" name="stage" {{#ifvalue this value=1}}checked="checked"{{/ifvalue}}/>
+		<input id="section-{{this}}" type="radio" name="stage" {{#ifvalue this value=1}}checked="checked"
+			{{/ifvalue}} />
 	{{/for}}
 
 	<div class="stages">
@@ -17,6 +19,8 @@
 
 	{{#block "buttons"}}{{/block}}
 	<button id="prevSection" class="btn btn-secondary" type="button" disabled="disabled">Zurück</button>
-	<button id="nextSection" class="btn btn-primary pull-right" type="submit" value="Submit"
-		data-next-label="Weiter" data-submit-label="{{#unless submit-label}}Absenden{{else}}{{submit-label}}{{/unless}}">Weiter</button>
+	<button id="nextSection" class="btn btn-primary pull-right" type="submit" value="Submit" data-next-label="Weiter"
+		data-submit-label="{{#unless submit-label}}Absenden{{else}}{{submit-label}}{{/unless}}">
+		Weiter
+	</button>
 </form>
