--- a/views/authentication/forms/login.hbs
+++ b/views/authentication/forms/login.hbs
@@ -43,7 +43,11 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" name="submit-login" class="btn btn-block btn-primary btn-login" value="Anmelden" data-testid="submit-login" />
+                    {{#if notification.statusCode}}
+                        <input type="submit" id="submit-login" class="btn btn-block btn-primary btn-login" value="Anmelden" data-testid="submit-login" data-timeout="{{notification.timeToWait}}" disabled/>
+                    {{else}}
+                        <input type="submit" id="submit-login" class="btn btn-block btn-primary btn-login" value="Anmelden" data-testid="submit-login" />
+                    {{/if}}
                 </div>
             </form>
         </div>
