--- a/views/help/forms/form_wish.hbs
+++ b/views/help/forms/form_wish.hbs
@@ -22,21 +22,8 @@
 	<textarea class="form-control" cols="50" name="acceptanceCriteria" rows="6" placeholder="z.B. Nach der Systemanmeldung gelange ich in maximal zwei Schritten zum Stundenkontext, kann die Schüleraufgabe dort mit einem Klick bearbeiten und die SchülerInnen bei Bedarf automatisch über die Änderung informieren."></textarea>
 </label>
 <label class="form-group">
-	<span class="control-label optional">Bereich wählen</span>
-	<select name="category" id="category" data-placeholder="Bereich wählen (optional)" class="chosen-select" tabindex="-1">
-		<option value="" selected disabled hidden></option>
-		<option value="login_registration">Anmeldung/Registrierung</option>
-		<option value="dashboard">Übersicht</option>
-		<option value="courses">Kurse</option>
-		<option value="classes">Klassen</option>
-		<option value="classes">Teams</option>
-		<option value="calendar">Termine</option>
-		<option value="homework">Aufgaben</option>
-		<option value="files">Meine Dateien</option>
-		<option value="content">Materialien</option>
-		<option value="administration">Verwaltung</option>
-		<option value="other">Sonstiges</option>
-	</select>
+	<span class="control-label optional">Gerät</span>
+	<input type="text" name="device" placeholder="z.B. iPhone X, Samsung Galaxy S10" class="form-control">
 </label>
 <label class="form-group">
 	<span class="control-label" for="email">
