--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -43,14 +43,14 @@
                                 <strong>Passwörter und Einverständniserklärung</strong>
 
                                 <p>
-                                    Durch Anbindung an ein Landes- oder Schulsystem haben die Lehrer bereits ein Passwort und können sich in der {{theme.short_title}} einloggen. 
+                                    Durch Anbindung an ein Landes- oder Schulsystem haben die Lehrer bereits ein Passwort und können sich in der {{theme.short_title}} einloggen.
                                     Beim ersten Login werden sie aufgefordert, ihr Einverständnis zur Nutzung der {{theme.short_title}} zu erklären .
                                 </p>
                             {{else}}
                                 <strong>Lade Lehrer per Link ein, die Einverständniserklärung abzugeben</strong>
                                 <p>
-                                    Lass deinen Lehrern individuelle Links zum Erklären des Einverständnisses digital oder Lass den Lehrern individuelle Links zum Abschluss der Registrierung per Mail oder analog per QR-Code-Druckbogen zukommen. 
-                                    So können sie sich ein Passwort erstellen und ihr Einverständnis zur Nutzung der {{theme.short_title}} erklären.analog zukommen. 
+                                    Lass deinen Lehrern individuelle Links zum Erklären des Einverständnisses digital oder Lass den Lehrern individuelle Links zum Abschluss der Registrierung per Mail oder analog per QR-Code-Druckbogen zukommen.
+                                    So können sie sich ein Passwort erstellen und ihr Einverständnis zur Nutzung der {{theme.short_title}} erklären.analog zukommen.
                                 </p>
                                 <p>Für alle Lehrer ohne vollständige Einverständniserklärung:</p>
                                 <p>
@@ -73,14 +73,16 @@
                             {{#if schoolUsesLdap}}
                                 {{> "lib/ldap-info"}}
                             {{else}}
-                                <button type="submit" class="btn btn-primary btn-add-modal">
-                                    Lehrer hinzufügen
-                                </button>
-                                {{#inArray "Administrator" roleNames}}
-                                    <button class="btn btn-secondary btn-import teacher">
-                                        Lehrer importieren
-                                    </button>
-                                {{/inArray}}
+								{{#userHasPermission "TEACHER_CREATE"}}
+									<button type="submit" class="btn btn-primary btn-add-modal">
+										Lehrer hinzufügen
+									</button>
+									{{#inArray "Administrator" roleNames}}
+										<button class="btn btn-secondary btn-import teacher">
+											Lehrer importieren
+										</button>
+									{{/inArray}}
+								{{/userHasPermission}}
                             {{/if}}
                         </div>
                     </div>
