--- a/theme/thr/views/lib/extended_footer.hbs
+++ b/theme/thr/views/lib/extended_footer.hbs
@@ -20,8 +20,7 @@
 					<li><a href="/datenschutz">Datenschutzerklärung: HPI</a>
 					<li><a href="{{@root.theme.documents.specificFiles.privacyExemplary}}" target="_blank" rel="noopener">Datenschutzerklärung: Muster Schulen</a>
 					</li>
-					<li><a href="/team">Team</a></li>
-					<li><a href="/partner">Partner</a></li>
+					<li><a href="/about">Über die Thüringer Schulcloud</a></li>
 					<li><a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a></li>
 				</ul>
 			</div>
