update people pages

--- a/theme/thr/views/help/mail-card.hbs
+++ b/theme/thr/views/help/mail-card.hbs
@@ -1,4 +1,3 @@
-<p>Das Hasso-Plattner-Institut steht für alle Fragen zur HPI Schul-Cloud zur Verfügung. Wir sind unter folgender Email-Adresse erreichbar:</p>
-<div id="email-addresses">
-    <a href="mailto:feedback@schul-cloud.org" target="_blank" rel="noopener">feedback@schul-cloud.org</a>
-</div>
+<p>Manche Anliegen brauchen mehr Möglichkeiten, als die Felder des Kontaktformulars zulassen. Schreib uns eine E-Mail, wenn du mit uns ins Gespräch kommen willst.<br />
+Die richtigen Kontaktpersonen für alle Situationen findest du im <a href="http://localhost:3100/help/faq/people">Ansprechpartner-Bereich</a>.</p>
+
