--- a/theme/thr/views/help/people.hbs
+++ b/theme/thr/views/help/people.hbs
@@ -24,6 +24,33 @@
 							</div>
 						</div>
 					</div>
+
+					<div class="card">
+						<div class="card-header" role="tab" id="heading-{{@index}}">
+							<h2 class="h5 mb-0">
+								HPI
+							</h2>
+						</div>
+						<div id="collapse-{{@index}}" class="collapse show in">
+							<div class="card-block">
+								Für technsiche Fragen richte dich bitte an das Hasso-Plattner-Institut unter folgender E-Mail-Adresse:<br>
+								<a href="mailto:thueringen@schul-cloud.org" target="blank" rel="noopener" class="externalLink">thueringen@schul-cloud.org</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="card">
+						<div class="card-header" role="tab" id="heading-{{@index}}">
+							<h2 class="h5 mb-0">
+								Feedback / Wünsche / Probleme bei der Nutzung
+							</h2>
+						</div>
+						<div id="collapse-{{@index}}" class="collapse show in">
+							<div class="card-block">
+								Für die Meldung von Problemen oder Wünschen hinsichtlich der Bedienung der Schul-Cloud verwende bitte das Kontaktformular im Hilfebereich oder sende eine E-Mail an <br><a href="mailto:feedback@schul-cloud.org" target="blank" rel="noopener" class="externalLink">feedback@schul-cloud.org</a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
