--- a/views/firstLogin/partials/imports.hbs
+++ b/views/firstLogin/partials/imports.hbs
@@ -5,4 +5,5 @@
 {{#content "styles" mode="append"}}
   <link rel="stylesheet" href="/styles/administration/dataprivacy.css"/>
   <link rel="stylesheet" href="/styles/lib/confetti/confetti.css"/>
+  <link rel="stylesheet" href="/styles/firstLogin/thanks.css"/>
 {{/content}}
