removed hard-coded string and replaced with globale variable

--- a/views/firstLogin/sections/thanks.hbs
+++ b/views/firstLogin/sections/thanks.hbs
@@ -7,7 +7,7 @@
             </div>
             <div class="col-xs-8 col-md-9">
                 <p>
-                    Wie funktioniert eigentlich die HPI Schul-Cloud?
+                    Wie funktioniert eigentlich die {{@root.theme.title}}?
                     Und wie kann ich meinen Unterricht damit organisieren, gestalten und durchführen?
                     Besuche unsere <b>Online-Fortbildung</b> und finde es heraus!
                 </p>
@@ -22,7 +22,7 @@
             </div>
             <div class="col-xs-8 col-md-9 mt-2">
                 <p>
-                    Über jede Seite in der Schul-Cloud kommst du mit Klick auf das <b>Fragezeichen</b> oben rechts in unseren <b>Hilfebereich</b>.
+                    Über jede Seite in der {{@root.theme.short_title}} kommst du mit Klick auf das <b>Fragezeichen</b> oben rechts in unseren <b>Hilfebereich</b>.
                     Dort findest du zu beinahe jedem Thema ausführliche Anleitungen und Bilderstrecken.
                 </p>
                 <p>
