add support mail to loggedout footer

--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -7,6 +7,7 @@
 				<h2 class="h4">Kontakt</h2>
 				<ul>
 					<li><span style="white-space: nowrap;"><a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">Allgemeine Anfragen: info@schul-cloud.org</a></span></li>
+					<li><span style="white-space: nowrap;"><a href="mailto:feedback@schul-cloud.org" target="_blank" rel="noopener">Support-Anfragen:  feedback@schul-cloud.org</a></span></li>
 					<li><span style="white-space: nowrap;"><a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">Inhalteanbieter: inhalte@schul-cloud.org</a></span></li>
 					<li><span style="white-space: nowrap;"><a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">Datenschutz: datenschutz@schul-cloud.org</a></span></li>
 					<li><a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" rel="noopener">Newsletter
