--- a/theme/open/views/lib/extended_footer.hbs
+++ b/theme/open/views/lib/extended_footer.hbs
@@ -4,10 +4,10 @@
 			<div class="col-md-4">
 				<h4>Kontakt</h4>
 				<ul>
-					<li><a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">Allgemeine Anfragen: info@schul-cloud.org</a></li>
-					<li><a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">Inhalteanbieter: inhalte@schul-cloud.org</a></li>
-					<li><a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">Datenschutz: datenschutz@schul-cloud.org</a>
-					</li>
+					<li><span style="white-space: nowrap;"><a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">Allgemeine Anfragen: info@schul-cloud.org</a></span></li>
+					<li><span style="white-space: nowrap;"><a href="mailto:feedback@schul-cloud.org" target="_blank" rel="noopener">Support-Anfragen:  feedback@schul-cloud.org</a></span></li>
+					<li><span style="white-space: nowrap;"><a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">Inhalteanbieter: inhalte@schul-cloud.org</a></span></li>
+					<li><span style="white-space: nowrap;"><a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">Datenschutz: datenschutz@schul-cloud.org</a></span></li>
 				</ul>
 			</div>
 			<div class="col-md-4">
