update about page

--- a/theme/thr/style.scss
+++ b/theme/thr/style.scss
@@ -57,3 +57,8 @@ aside.nav-sidebar {
 .navbar-nav .btn-avatar .dropdown-toggle .avatar-circle {
     background-color: $primaryColor;
 }
+
+.schoollogo-placeholder {
+	color: $primaryColorLight;
+	font-size: 130px;
+}
