--- a/theme/thr/views/about/about.hbs
+++ b/theme/thr/views/about/about.hbs
@@ -9,25 +9,47 @@
 		<p>Die Thüringer Schulcloud ist im Oktober 2019 in die Pilotphase gestartet, in der zunächst 20 Pilotschulen und 9 Studienseminare die Thüringer Schulcloud nutzen konnten.</p>
 		<br />
 		<h2 class="h3 section-title center">Pilotschulen des MINT-EC (Start Oktober 2019)</h2>
-		<div class="row">
-			<div class="col-xs-12 col-md-6 text-center">
-				<a href="https://www.mint-ec.de/schulnetzwerk/mint-ec-schulen/microsite/albert-schweitzer-gymnasium-erfurt/">Albert-Schweitzer-Gymnasium Erfurt</a>
-				<a href="https://www.mint-ec.de/schulnetzwerk/mint-ec-schulen/microsite/albert-schweitzer-gymnasium-erfurt/"><br />
-				<img src="http://www.asg-erfurt.de/wp-content/themes/asgerfurt4.0/images/asg_logo.jpg" alt="Logo Albert-Schweitzer-Gymnasium Erfurt" /></a>
+		<div class="embed-pdf">
+			<div class="row embed-pdf-row">
+				<div class="single-pdf col-xs-12 col-md-6 text-center">
+					<a href="https://www.mint-ec.de/schulnetzwerk/mint-ec-schulen/microsite/albert-schweitzer-gymnasium-erfurt/">
+						<div class="single-pdf-wrapper">
+							Albert-Schweitzer-Gymnasium Erfurt
+							<br />
+							<img src="https://s3.hidrive.strato.com/schul-cloud-hpi/thr/images/asg_logo.jpg" alt="Logo Albert-Schweitzer-Gymnasium Erfurt" />
+						</div>
+					</a>
+				</div>
+				<div class="single-pdf col-xs-12 col-md-6 text-center">
+					<div class="single-pdf-wrapper">
+						<a href="https://www.mint-ec.de/schulnetzwerk/mint-ec-schulen/microsite/carl-zeiss-gymnasium/">
+							Carl-Zeiss-Gymnasium
+							<br /><br />
+							<img src="https://s3.hidrive.strato.com/schul-cloud-hpi/thr/images/carl-zeiss-gymnasium-logo.jpg" alt="Logo Carl-Zeiss-Gymnasium" />
+						</a>
+					</div>
+				</div>
 			</div>
-			<div class="col-xs-12 col-md-6 text-center">
-				<a href="https://www.mint-ec.de/schulnetzwerk/mint-ec-schulen/microsite/carl-zeiss-gymnasium/">Carl-Zeiss-Gymnasium</a>
-				<a href="https://www.mint-ec.de/schulnetzwerk/mint-ec-schulen/microsite/carl-zeiss-gymnasium/"><br />
-				<img src="https://cz-gymnasium.jena.de/wp-content/uploads/2015/10/logo-e1445531715472.png" alt="Logo Carl-Zeiss-Gymnasium" /></a>
-			</div>
-		</div>
-		<br />
-		<div class="row">
-			<div class="col-xs-12 col-md-6 text-center">
-				<a href="http://www.ernstabbegymnasium.de/">Staatliches Gymnasium und Seminarschule "Ernst Abbe" Eisenach</a>
-			</div>
-			<div class="col-xs-12 col-md-6 text-center">
-				<a href="https://www.mint-ec.de/schulnetzwerk/mint-ec-schulen/microsite/goetheschule-ilmenau/">Goetheschule Ilmenau</a>
+			<br />
+			<div class="row embed-pdf-row">
+				<div class="single-pdf col-xs-12 col-md-6 text-center">
+					<a href="https://www.ernstabbegymnasium.de">
+						<div class="single-pdf-wrapper">
+							Staatliches Gymnasium und Seminarschule "Ernst Abbe" Eisenach
+							<br />
+							<i class="fa fa-university schoollogo-placeholder" aria-hidden="true"></i>
+						</div>
+					</a>
+				</div>
+				<div class="single-pdf col-xs-12 col-md-6 text-center">
+					<div class="single-pdf-wrapper">
+						<a href="https://www.mint-ec.de/schulnetzwerk/mint-ec-schulen/microsite/goetheschule-ilmenau/">
+							Goetheschule Ilmenau
+							<br /><br />
+							<i class="fa fa-university schoollogo-placeholder" aria-hidden="true"></i>
+						</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	{{/content}}
