--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -2,10 +2,10 @@
     <div class="row">
         {{#each files}}
             <div class="col-sm-12">
-                <div class="card file {{#if true}}btn-file-danger{{/if}}" data-href="/files/file?file={{this.name}}" data-file-name="{{this.name}}" data-file-size="{{this.size}}" data-file-id="{{this._id}}">
+                <div class="card file {{#ifeq this.securityCheck.status "blocked"}}btn-file-danger{{/ifeq}}" data-href="/files/file?file={{this.name}}" data-file-name="{{this.name}}" data-file-size="{{this.size}}" data-file-id="{{this._id}}">
                     <div class="openFile">
                         <div class="card-block"
-                            {{#if false}}onclick="fileViewer('{{this.type}}', '{{this.name}}', '{{this._id}}');"{{/if}}>
+                            {{#ifneq this.securityCheck.status "blocked"}}onclick="fileViewer('{{../this.type}}', '{{../this.name}}', '{{../this._id}}');"{{/ifneq}}>
                             <div class="card-title">
                                 <div class="file-preview-wrapper col-sm-1 no-padding hidden-xs-down">
                                     <div class="file-preview"
@@ -20,20 +20,20 @@
                             </div>
                             <div class="card-text">
                               <small class="file-location">{{#if this.context}}gefunden in: {{this.context}}{{/if}}</small><br>
-                                {{#if true}}
+                                {{#ifeq this.securityCheck.status "blocked"}}
                                 	<a href="#"
                                     class="btn-file-danger"
-                                    title="Schädlicher code">
+                                    title="Schädlicher Code">
                                         <i class="fa fa-exclamation-triangle"></i>
                                     </a>
                                 {{else}}
-                                    <a href="/files/file?download&file={{this._id}}&name={{this.storageFileName}}"
+                                    <a href="/files/file?download&file={{../this._id}}&name={{../this.storageFileName}}"
                                         target="_blank"
                                         data-method="download"
                                         title="Datei herunterladen">
                                         <i class="fa fa-cloud-download"></i>
                                     </a>
-                                {{/if}}
+                                {{/ifeq}}
 
                                 <i  data-file-id="{{this._id}}"
                                     data-file-name="{{this.name}}"
