SC-1567 fix school links

--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -200,10 +200,9 @@
 			mit der HPI Schul-Cloud ist eine externe bildungswissenschaftliche Begleitung beauftragt. Zum einen führt
 			die
 			<a href="https://osf.io/bzu4t/?view_only=14ad7519b5a24af7a83cf40b43377142" target="_blank">Universität
-				Tübingen</a> eine wissenschaftliche
+			Tübingen</a> eine wissenschaftliche
 			Befragung der Pilotschulen zu Potenzialen der HPI Schul-Cloud durch. Zum anderen gestaltet das
-			<a href="http://www.gei.de/abteilungen/schulbuch-als-medium/schools-in-the-cloud-wissenschaftliche-begleitforschung-der-schul-cloud-einfuehrung.html"
-				target="_blank">Georg-Eckert-Institut</a>
+			<a href="http://www.gei.de/home.html" target="_blank">Georg-Eckert-Institut</a>
 			aufbauend auf den Ergebnissen von Unterrichtsbeobachtungen und Workshops mit den Pilotschulen ein
 			Nutzungskonzept für die pädagogisch-didaktisch sinnvolle Anwendung der HPI Schul-Cloud. Außerdem hat das HPI
 			zusammen mit der <a href="https://www.presse.uni-augsburg.de/unipressedienst/2018/jan-maerz/2018_003/"
