--- a/views/teams/forms/form-file-permissions.hbs
+++ b/views/teams/forms/form-file-permissions.hbs
@@ -9,7 +9,7 @@
 
 <div class="form-group">
     <h2 class="h4">Dateifreigabe-Einstellungen</h2>
-    <strong>Voreingestellte Zugriffsberechtigungen für neue Ordner und Dateien innerhalb des Teams:</strong>
+    <strong>Voreingestellte Zugriffsberechtigungen für ab dem Zeitpunkt der Einstellung neu hochgeladene/erstellte Ordner und Dateien innerhalb des Teams:</strong>
     <br><br>
     <table class="team-file-permissions">
         <tr>
