--- a/views/homework/components/course_overview_card_template.hbs
+++ b/views/homework/components/course_overview_card_template.hbs
@@ -7,8 +7,10 @@
             {{#if dueDate}}
             {{!-- TODO  Color by distance --}}
               Fällig {{timeFromNow dueDate}}
+            {{else}}
+                Kein Abgabedatum festgelegt
             {{/if}}
-            &nbsp;<i class="fa fa-info" title="{{timeToString availableDate}} bis {{timeToString dueDate}}"></i>
+            &nbsp;<i class="fa fa-info" title="{{timeToString availableDate}} {{#if dueDate}}bis {{timeToString dueDate}}{{/if}}"></i>
         </div>
         <h2 class="h5 title">{{{stripOnlyScript this.name}}}</h2>
         <div class="description">
