--- a/views/firstLogin/sections/thanks.hbs
+++ b/views/firstLogin/sections/thanks.hbs
@@ -1,38 +1,89 @@
 <section data-panel="section-{{section-nr}}">
     <div class="welcomeGreeting">
-        <img src="/images/firstLogin/welcome_banner.svg">
-        <div class="row mt-3">
-            <div class="col-xs-4 col-md-3">
-                <img src="/images/firstLogin/welcome_1_fobi.svg" alt="Online-Fortbildung">
+        <div class="welcomeGreetingImage" id="welcome">
+            <img class="text-center" src="/images/firstLogin/welcome-banner.svg">
+        </div>
+        <!-- fokus here -->
+        <a href=""></a> 
+        <div class="welcomeGreetingScroll">
+            <div class="btn-scroll text-center mt-2">
+                <div class="arrow"></div>
             </div>
-            <div class="col-xs-8 col-md-9">
-                <p>
-                    Wie funktioniert eigentlich die {{@root.theme.title}}?
-                    Und wie kann ich meinen Unterricht damit organisieren, gestalten und durchführen?
-                    Besuche unsere <b>Online-Fortbildung</b> und finde es heraus!
-                </p>
-                <div class="text-center">
-                    <a class="btn btn-warning" target="_blank" rel="noopener noreferrer" href="https://mooc.house/courses/schulcloud2019">Hier gehts zur Fortbildung</a>
+        </div>
+        <div id="information">
+            {{#ifeq roleName 'Schüler'}}
+                <div class="row mt-3">
+                    <div class="col-xs-4 col-md-3">
+                        <img src="/images/firstLogin/welcome-1-student.svg" alt="Online-Fortbildung">
+                    </div>
+                    <div class="col-xs-8 col-md-9">
+                        Nun kannst du von deinen Lehrkräften in Kurse eingeladen werden und dort auf Unterrichtsmaterialien und Aufgaben zugreifen.
+                        Du hast auch einen eigenen Dateibereich, wo du wichtige Dokumente und Ordner ablegen kannst.
+                        Viel Spaß beim Erkunden! 
+                    </div>
+                </div>
+            {{/ifeq}}
+            {{#ifeq roleName 'Lehrer'}}
+                <div class="row mt-3">
+                    <div class="col-xs-4 col-md-3">
+                        <img src="/images/firstLogin/welcome-1-fobi.svg" alt="Online-Fortbildung">
+                    </div>
+                    <div class="col-xs-8 col-md-9">
+                        <p>
+                            Was kann die {{@root.theme.short_title}} eigentlich?
+                            Und wie kann ich meinen Unterricht damit organisieren, gestalten und durchführen?
+                            Besuche unsere <b>Online-Fortbildung</b> für anschauliche und praxisnahe Videos und finde es heraus! 
+                        </p>
+                        <div class="text-center">
+                            <a class="btn btn-warning" target="_blank" rel="noopener noreferrer" href="https://mooc.house/courses/schulcloud2019">Hier gehts zur Fortbildung</a>
+                        </div>
+                    </div>
+                </div>
+            {{/ifeq}}
+            {{#ifeq roleName 'Administrator'}}
+                <div class="row mt-3">
+                    <div class="col-xs-4 col-md-3">
+                        <img src="/images/firstLogin/welcome-1-fobi.svg" alt="Online-Fortbildung">
+                    </div>
+                    <div class="col-xs-8 col-md-9">
+                        <p>
+                            Du bist Admin und hast die ehrenvolle Aufgabe, die {{@root.theme.title}} für deine Schule einzurichten?
+                            Wir lassen dich mit dieser wichtigen Aufgabe nicht allein.
+                            Besuche unsere <b>Online-Fortbildung</b> und erfahre dort in anschaulichen Erklärvideos alles was du als Admin wissen musst! 
+                        </p>
+                        <div class="text-center">
+                            <a class="btn btn-warning" target="_blank" rel="noopener noreferrer" href="https://mooc.house/courses/schulcloud2019">Hier gehts zur Fortbildung</a>
+                        </div>
+                    </div>
+                </div>
+            {{/ifeq}}
+            <div class="row mt-2">
+                <div class="col-xs-4 col-md-3">
+                    <img src="/images/firstLogin/welcome-2-help.svg" alt="Help">
+                </div>
+                <div class="col-xs-8 col-md-9 mt-2">
+                    <p>
+                        Über jede Seite in der {{@root.theme.short_title}} kommst du mit Klick auf das <b>Fragezeichen</b> oben rechts in unseren <b>Hilfebereich</b>.
+                        Dort findest du zu beinahe jedem Thema ausführliche Anleitungen und Bilderstrecken.
+                    </p>
+                    <p>
+                        Schau einfach mal vorbei!
+                    </p>
                 </div>
             </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col-xs-4 col-md-3">
-                <img src="/images/firstLogin/welcome_2_help.svg" alt="Help">
+            <div class="text-center mt-2 mb-3">
+                <a class="btn btn-secondary mr-2" data-testid='btn_schul-cloud_erkunden' href="/">Sofort loslegen</a>
+                {{#ifeq roleName 'Schüler'}}
+                    <a class="btn btn-primary" href="/help/confluence/40304731">Erste Schritte anschauen</a>
+                {{/ifeq}}
+                {{#ifeq roleName 'Lehrer'}}
+                    <a class="btn btn-primary" href="/help/confluence/40304726">Erste Schritte anschauen</a>
+                {{/ifeq}}
+                {{#ifeq roleName 'Administrator'}}
+                    <a class="btn btn-primary" href="/help/confluence/40304667">Erste Schritte anschauen</a>
+                {{/ifeq}}
             </div>
-            <div class="col-xs-8 col-md-9 mt-2">
-                <p>
-                    Über jede Seite in der {{@root.theme.short_title}} kommst du mit Klick auf das <b>Fragezeichen</b> oben rechts in unseren <b>Hilfebereich</b>.
-                    Dort findest du zu beinahe jedem Thema ausführliche Anleitungen und Bilderstrecken.
-                </p>
-                <p>
-                    Schau einfach mal vorbei!
-                </p>
-            </div>
-        </div>
-        <div class="text-center mt-2">
-            <a class="btn btn-secondary mr-2" data-testid='btn_schul-cloud_erkunden' href="/">Sofort loslegen</a>
-            <a class="btn btn-primary" href="/help#erste_schritte">Erste Schritte anschauen</a>
         </div>
     </div>
+    <hr>
 </section>
