changed position of buttons

--- a/views/firstLogin/sections/thanks.hbs
+++ b/views/firstLogin/sections/thanks.hbs
@@ -34,7 +34,7 @@
                             Und wie kann ich meinen Unterricht damit organisieren, gestalten und durchführen?
                             Besuche unsere <b>Online-Fortbildung</b> für anschauliche und praxisnahe Videos und finde es heraus! 
                         </p>
-                        <div class="text-center">
+                        <div class="text-xs-right">
                             <a class="btn btn-warning" target="_blank" rel="noopener noreferrer" href="https://mooc.house/courses/schulcloud2019">Hier gehts zur Fortbildung</a>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                             Wir lassen dich mit dieser wichtigen Aufgabe nicht allein.
                             Besuche unsere <b>Online-Fortbildung</b> und erfahre dort in anschaulichen Erklärvideos alles was du als Admin wissen musst! 
                         </p>
-                        <div class="text-center">
+                        <div class="text-xs-right">
                             <a class="btn btn-warning" target="_blank" rel="noopener noreferrer" href="https://mooc.house/courses/schulcloud2019">Hier gehts zur Fortbildung</a>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                     </p>
                 </div>
             </div>
-            <div class="text-center mt-2 mb-3">
+            <div class="text-xs-right mt-2 mb-3">
                 <a class="btn btn-secondary mr-2" data-testid='btn_schul-cloud_erkunden' href="/">Sofort loslegen</a>
                 {{#ifeq roleName 'Schüler'}}
                     <a class="btn btn-primary" href="/help/confluence/40304731">Erste Schritte anschauen</a>
