move duplicated contact links into a single hbs file

--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -6,10 +6,8 @@
 			<div class="col-md-4">
 				<h2 class="h4">Kontakt</h2>
 				<ul>
-					<li><a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">Allgemeine Anfragen: <span class="text-nowrap">info@schul-cloud.org</span></a></li>
-					<li><a href="mailto:feedback@schul-cloud.org" target="_blank" rel="noopener">Support Anfragen:  <span class="text-nowrap">feedback@schul-cloud.org</span></a></li>
-					<li><a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">Inhalteanbieter: <span class="text-nowrap">inhalte@schul-cloud.org</span></a></li>
-					<li><a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">Datenschutz: <span class="text-nowrap">datenschutz@schul-cloud.org</span></a></li>
+					<li><a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">Allgemein: <span class="text-nowrap">info@schul-cloud.org</span></a></li>
+					{{> "lib/extended_footer_links"}}
 					<li><a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" rel="noopener">Newsletter
 							abonnieren</a></li>
 				</ul>
