--- a/theme/open/views/lib/extended_footer.hbs
+++ b/theme/open/views/lib/extended_footer.hbs
@@ -5,9 +5,7 @@
 				<h4>Kontakt</h4>
 				<ul>
 					<li><a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">Allgemeine Anfragen: <span class="text-nowrap">info@schul-cloud.org</span></a></li>
-					<li><a href="mailto:feedback@schul-cloud.org" target="_blank" rel="noopener">Support-Anfragen:  <span class="text-nowrap">feedback@schul-cloud.org</span></a></li>
-					<li><a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">Inhalteanbieter: <span class="text-nowrap">inhalte@schul-cloud.org</span></a></li>
-					<li><a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">Datenschutz: <span class="text-nowrap">datenschutz@schul-cloud.org</span></a></li>
+					{{> "lib/extended_footer_links"}}
 				</ul>
 			</div>
 			<div class="col-md-4">
