allgemeine anfragen brb

--- a/theme/brb/views/lib/extended_footer.hbs
+++ b/theme/brb/views/lib/extended_footer.hbs
@@ -4,7 +4,7 @@
 			<div class="col-md-4">
 				<h4>Kontakt</h4>
 				<ul>
-					<li><a href="mailto:brandenburg@schul-cloud.org" target="_blank" rel="noopener">Allgemein: <span class="text-nowrap">brandenburg@schul-cloud.org</span></a></li>
+					<li><a href="mailto:brandenburg@schul-cloud.org" target="_blank" rel="noopener">Allgemeine Anfragen: <span class="text-nowrap">brandenburg@schul-cloud.org</span></a></li>
 					{{> "lib/extended_footer_links"}}
 				</ul>
 			</div>
