--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -21,10 +21,11 @@
 		<p>Das Projekt HPI Schul-Cloud ist im September 2016 in die 5-monatige Konzeptphase gestartet. Ab Mai 2017
 			startete die Pilotphase, in der zunächst 27 MINT-EC-Schulen die HPI Schul-Cloud testen und nutzen konnten.
 			Im Mai 2018 begann die Roll-Out-Phase, in der die Nutzung der HPI Schul-Cloud stufenweise auf alle 325
-			Schulen aus dem nationalen Excellence-Schulnetzwerks MINT-EC ausgeweitet wird. Derzeit können 120 MINT-EC
+			Schulen aus dem nationalen Excellence-Schulnetzwerk MINT-EC ausgeweitet wird. Derzeit können 120 MINT-EC
 			Pilotschulen bundesweit und im Ausland die HPI Schul-Cloud im Unterricht nutzen. <br />
-			Als Niedersächsische Bildungscloud und Schul-Cloud Brandenburg werden landesweite Lösungen an jeweils ca. 50 Schulen aller Schulformen im Unterrichtseinsatz
-			erprobt. Weitere Pilotprojekte mit Schulträgern und einzelnen Schulen in ganz Deutschland starten derzeit. (Stand Oktober 2019) <br />
+			Als Niedersächsische Bildungscloud und Schul-Cloud Brandenburg werden landesweite Lösungen an jeweils 
+			ca. 50 Schulen aller Schulformen im Unterrichtseinsatz erprobt. Weitere Pilotprojekte mit Schulträgern 
+			und einzelnen Schulen in ganz Deutschland starten derzeit. (Stand Oktober 2019) <br />
 			Auch unser <a href="/team">Team</a> wächst stetig!
 		</p>
 		<video controls preload="metadata"
